# flock

./: .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE-MATRIX.md  LICENSE  NOTICE  README.md  SKILL.md  build.rs  clippy.toml  deny.toml  flake.nix  guardrails-allow.txt  justfile
.config/: nextest.toml
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: build-artifacts-manual.yml  ci.yml  issue-gate.yml  label-next-release-issues.yml  latest-branch.yml  nix.yml  pr-gate.yml  preview.yml  release.yml
.pi/prompts/: pre-release-audit.md
.zed/: settings.json
assets/web/: index.html
docs/: DEBT.md
docs/PRs/: 0001-feat-pane-float-the-last-submitted-prompt-over-agent-panes.md  0002-fix-worktree-close-two-merge-gate-blind-spots.md  0003-fix-worktree-gh-merge-evidence-must-match-the-local-branch-t.md  0004-feat-cli-herdr-worktree-kill-scriptable-merge-gated-cleanup.md  0005-feat-ui-operator-hud-reserved-pane-headers-global-status-lin.md  0006-docs-agents-codify-the-fork-fleet-pr-flow.md  0007-feat-ui-gh-aware-branch-segment-in-the-pane-header.md  0008-feat-agents-workspace-scoped-attention-cycling.md  0009-style-ui-transparent-pane-header-hairline-divider-left-align.md  0010-chore-dist-latest-branch-channel-for-nix-consumers.md  0011-fix-agents-scoped-attention-fallback-cycles-all-workspace-pa.md  0012-feat-agents-project-scoped-attention-repo-family-agent-unit.md  0013-feat-api-peer-pid-pane-resolution-hostname-in-status-line.md  (+74 more)
docs/adr/: README.md  (+4 more)
nix/: package.nix
scripts/: changelog.py  export-issues-prs.py  mark_trace_fields.py  preview.py  screensaver_demo.py  seed_navigator_demo.sh  sheep_demo.py  smoke_live_handoff_sessions.sh  test_changelog.py  test_preview.py  vendor_libghostty_vt.py
src/: agent_resume.rs  build_info.rs  checksum.rs  cli.rs  config.rs  events.rs  kitty_graphics.rs  layout.rs  logging.rs  main.rs  pane.rs  peers.rs  persist.rs  process.rs  product_announcements.rs  raw_input.rs  release_notes.rs  remote.rs  render_prof.rs  selection.rs  server_icons.rs  session.rs  sound.rs  system_stats.rs  terminal_theme.rs  ui.rs  update.rs  workspace.rs  worktree.rs
tests/: api_ping.rs  auto_detect.rs  cli_wrapper.rs  client_mode.rs  cross_area.rs  detach_reattach.rs  live_handoff.rs  multi_client.rs  peer_federation.rs  remote_bridge.rs  server_headless.rs
website/: README.md  astro.config.mjs  index.html  install.sh  latest.json  package.json  preview.json  robots.txt
(+224 files in other folders)
