[package]
name = "flock-ai"
version = "0.6.8"
edition = "2021"
build = "build.rs"
description = "terminal workspace manager for AI coding agents"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gerchowl/flock"
homepage = "https://flock.dev"
keywords = ["terminal", "tui", "ai", "agents", "multiplexer"]
categories = ["command-line-utilities"]
include = ["src/**/*", "assets/sounds/*", "assets/web/**/*", "README.md", "LICENSE", "Cargo.toml"]

# crates.io package is `flock-ai` (the plain `flock` name is taken); the
# command users invoke is `flk` — chosen to avoid colliding with util-linux
# `flock(1)` on Linux. Brand/product name stays `flock`. See ADR-0003.
[[bin]]
name = "flk"
path = "src/main.rs"

# Compile-time print policing (pairs with the guardrails no-debug-leftovers text
# gate): whole-module output surfaces carry `#![expect(...)]`, everything else is
# per-fn — `#[expect]` is self-expiring, so a removed print surfaces as an
# unfulfilled-expectation error instead of a stale allowlist entry.
[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

[features]
# `flock web`: xterm.js <-> flock PTY bridge (gerchowl/flock#131). Kept behind a
# feature so axum/futures-util/rust-embed stay out of a default `flock` build.
# tokio/net + tokio/io-util are the runtime drivers axum needs for `axum::serve`.
web = ["dep:anyhow", "dep:axum", "dep:futures-util", "dep:rust-embed", "tokio/net", "tokio/io-util"]

[dependencies]
anyhow = { version = "1", optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
# serde: KeyModifiers serializes inside RightClickPassthroughModifierConfig —
# Config is Serialize end-to-end (KNOWN-keys drift guard; derived default config).
crossterm = { version = "0.29", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
futures-util = { version = "0.3", optional = true }
libc = "0.2"
portable-pty = "0.9"
rust-embed = { version = "8", optional = true }
png = "0.18"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
unicode-width = "0.2"
sysinfo = "0.39.3"
